fix: add a small help text

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -321,7 +321,8 @@
         "RESTAURANT_DASHBOARD_ACCEPTED_ORDERS": "Accepted orders",
         "RESTAURANT_DASHBOARD_FULFILLED_ORDERS": "Fulfilled orders",
         "RESTAURANT_DASHBOARD_CANCELLED_REFUSED_ORDERS": "Cancelled/refused orders",
-        "RESTAURANT_DASHBOARD_DELAY_SETTING": "Delay",
+        "RESTAURANT_DASHBOARD_DELAY_SETTING": "Pickup delay",
+        "RESTAURANT_DASHBOARD_DELAY_SETTING_HELP": "The platform won't propose drop times to the customer that would imply a pickup in the next X minutes. This setting is independent from restaurant's prep time or rush mode.",
         "RESTAURANT_DASHBOARD_DELAY_MARK_NONE": "None",
         "RESTAURANT_DASHBOARD_ORDER_TITLE": "Order {{number}}",
         "RESTAURANT_DASHBOARD_PREPARATION_AT": "Preparation should start at {{time}}",
