--- a/translations/messages.cs.yml
+++ b/translations/messages.cs.yml
@@ -1111,7 +1111,7 @@ profile.edenred.connected: Účet Edenred připojen
 notifications.tap_to_open: Klepnutím otevřete
 notifications.tasks_changed_today: Vaše dnešní úkoly byly aktualizovány
 notifications.delivery_created: Byla vytvořena dodávka k vyzvednutí %date%
-ordering_delay.admin_reminder: Nakonfigurovali jste globální zpoždění objednávek
+ordering_delay.admin_reminder: Nastavili jste globální zpoždění vyzvednutí Foodtech
 ordering_delay.disclaimer: V současné době dostáváme spoustu objednávek, dodací lhůty
   se prodlužují!
 form.fulfillment_method.options.range_duration.label: Rozsah dosahu
