Fix translation key for failure reasons.

--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -1336,25 +1336,26 @@ import.delivery.price.error.priceCalculation.row: El precio de la entrega no pud
 import.unsuccessful.rows: "Se encontraron errores y no fue posible crear entregas para las filas: %rows%."
 security.login.remember_me: Recordar
 delivery.failure_reason:
-  damaged: "Dañado"
-  lost: "Perdido"
-  late: "Entrega retrasada"
-  incorrect_address: "Dirección incorrecta"
-  customer_refused: "Cliente rechazó la entrega"
-  item_missing: "Artículo faltante"
-  incorrect_item: "Artículo incorrecto"
-  bad_weather: "Condiciones climáticas adversas"
-  vehicle_breakdown: "Avería del vehículo"
-  traffic_delays: "Retrasos por tráfico"
-  routing_problems: "Problemas de enrutamiento"
-  customs_issues: "Problemas aduaneros"
-  inventory_shortage: "Escasez de inventario"
-  address_unreachable: "Dirección inaccesible"
-  insufficient_funds: "Fondos insuficientes"
-  data_entry_error: "Error en la entrada de datos"
-  packaging_problems: "Problemas de embalaje"
-  holiday_closure: "Cierre por vacaciones"
-  closed_store: "Tienda cerrada"
+  default:
+    damaged: "Dañado"
+    lost: "Perdido"
+    late: "Entrega retrasada"
+    incorrect_address: "Dirección incorrecta"
+    customer_refused: "Cliente rechazó la entrega"
+    item_missing: "Artículo faltante"
+    incorrect_item: "Artículo incorrecto"
+    bad_weather: "Condiciones climáticas adversas"
+    vehicle_breakdown: "Avería del vehículo"
+    traffic_delays: "Retrasos por tráfico"
+    routing_problems: "Problemas de enrutamiento"
+    customs_issues: "Problemas aduaneros"
+    inventory_shortage: "Escasez de inventario"
+    address_unreachable: "Dirección inaccesible"
+    insufficient_funds: "Fondos insuficientes"
+    data_entry_error: "Error en la entrada de datos"
+    packaging_problems: "Problemas de embalaje"
+    holiday_closure: "Cierre por vacaciones"
+    closed_store: "Tienda cerrada"
 adminDashboard.failureSet.title: "Motivos de Fallo"
 adminDashboard.failureSet.help: "Establezca los motivos por los cuales sus entregas pueden fallar."
 adminDashboard.failureSet.nofailureSet: "Ningún motivo de fallo"
