--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -698,25 +698,26 @@ checkout.breadcrumb.confirm: Bestätigung
 products.on_demand_delivery.name: Lieferung auf Anfrage
 security.login.remember_me: An mich erinnern
 delivery.failure_reason:
-  damaged: "Beschädigt"
-  lost: "Verloren"
-  late: "Verspätete Lieferung"
-  incorrect_address: "Falsche Adresse"
-  customer_refused: "Kunde hat die Lieferung verweigert"
-  item_missing: "Fehlendes Element"
-  incorrect_item: "Falsches Element geliefert"
-  bad_weather: "Schlechtes Wetter"
-  vehicle_breakdown: "Fahrzeugausfall"
-  traffic_delays: "Verkehrsverzögerungen"
-  routing_problems: "Routing-Probleme"
-  customs_issues: "Zollprobleme"
-  inventory_shortage: "Inventurmangel"
-  address_unreachable: "Nicht erreichbare Adresse"
-  insufficient_funds: "Unzureichende Mittel"
-  data_entry_error: "Datenfehler"
-  packaging_problems: "Probleme der Verpackung"
-  holiday_closure: "Ferienverlängerung"
-  closed_store: "Geschäft geschlossen"
+  default:
+    damaged: "Beschädigt"
+    lost: "Verloren"
+    late: "Verspätete Lieferung"
+    incorrect_address: "Falsche Adresse"
+    customer_refused: "Kunde hat die Lieferung verweigert"
+    item_missing: "Fehlendes Element"
+    incorrect_item: "Falsches Element geliefert"
+    bad_weather: "Schlechtes Wetter"
+    vehicle_breakdown: "Fahrzeugausfall"
+    traffic_delays: "Verkehrsverzögerungen"
+    routing_problems: "Routing-Probleme"
+    customs_issues: "Zollprobleme"
+    inventory_shortage: "Inventurmangel"
+    address_unreachable: "Nicht erreichbare Adresse"
+    insufficient_funds: "Unzureichende Mittel"
+    data_entry_error: "Datenfehler"
+    packaging_problems: "Probleme der Verpackung"
+    holiday_closure: "Ferienverlängerung"
+    closed_store: "Geschäft geschlossen"
 adminDashboard.failureSet.title: "Fehlergründe"
 adminDashboard.failureSet.help: "Legen Sie die Gründe fest, warum Ihre Lieferungen fehlschlagen können."
 adminDashboard.failureSet.nofailureSet: "Keine Fehlergründe"
