--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1624,3 +1624,4 @@ order.export.heading.applied_billing: Applied billing
 deliveries.import_upload_error: The file couldn't be uploaded. Please try again later.
 organizations.breadcrumb: Organizations
 organizations.new: New organization
+loopeat.incident.unexpected_returns: Unexpected number of zero waste returns
