feat(colisactiv): add an option to export delivery including unfinished tasks in the ColisActiv format
Fixes: #4698

--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1586,3 +1586,5 @@ form.billing_method.percentage: "Pourcentage du montant de la commande"
 order.export.heading.billing_method: "Méthode de facturation"
 order.export.heading.applied_billing: "Facturation appliquée"
 deliveries.import_upload_error: "Le fichier n'a pas pu être téléchargé. Veuillez réessayer plus tard."
+form.task_export.colisactiv.label: Exporter au format ColivActiv
+form.task_export.colisactiv_all.label: Exporter au format ColivActiv incluant toutes les tâches non terminées
