--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1405,6 +1405,7 @@ form.integration.woopitStoreId.label: Woopit store identifier
 integration.created.message: The integration has been created.
 profile.dabba.disconnect: Disconnect Dabba
 form.task_export.colisactiv.label: Export using ColivActiv format
+form.task_export.colisactiv_all.label: Export using ColivActiv format including all unfinished tasks
 form.task_export.format.label: Export format
 tasks.mark_as_done.has_previous: 'Task #%failed_task% could not be completed because it has a previous task #%previous_task% which must be completed first.'
 import.errors.at.row: Errors at row %row_number%
