--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1588,3 +1588,4 @@ order.export.heading.applied_billing: "Facturation appliquée"
 deliveries.import_upload_error: "Le fichier n'a pas pu être téléchargé. Veuillez réessayer plus tard."
 form.task_export.colisactiv.label: Exporter au format ColivActiv
 form.task_export.colisactiv_all.label: Exporter au format ColivActiv incluant toutes les tâches non terminées
+form.local_business.iso_code.fr.siret.help: Trouvez le numéro SIRET sur <a href="https://annuaire-entreprises.data.gouv.fr/" target="_blank">l'Annuaire des Entreprises</a>
