--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -21,7 +21,7 @@
         "DATEPICKER_TOMORROW": "[Tomorrow]",
         "DASHBOARD_UNASSIGNED": "Unassigned",
         "DASHBOARD_UNASSIGNED_TOURS": "Unassigned tours",
-        "DASHBOARD_GENERATING_ORDERS": "Checking active subscriptions...",
+        "DASHBOARD_GENERATING_ORDERS": "Checking recurrence rules ...",
         "ENABLED": "Enabled",
         "DISABLED": "Disabled",
         "UNDO": "Undo",
@@ -168,7 +168,7 @@
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Show recurrence rules",
         "RECURRENCE_RULE_ADD": "Add recurrence rule",
         "RECURRENCE_RULE_DAYS_REQUIRED": "Please choose at least one day",
-        "SUBSCRIPTION_CANCELLED": "Subscription cancelled",
+        "SUBSCRIPTION_CANCELLED": "Recurrence rule cancelled",
         "ADMIN_DASHBOARD_DELETE_GROUP_CONFIRM": "Are you sure you want to delete all the tasks in this group?",
         "ADMIN_DASHBOARD_DELETE_TOUR_CONFIRM": "Delete this tour and move tasks to \"Unassigned\"",
         "ADMIN_DASHBOARD_TOOLTIP_COMPLETED": "Completed",
