--- a/js/app/i18n/locales/de.json
+++ b/js/app/i18n/locales/de.json
@@ -119,6 +119,7 @@
         "ADMIN_VEHICLE_WAREHOUSE_LABEL": "Lager",
         "ADMIN_VEHICLE_NO_WAREHOUSE": "Bitte erstellen Sie ein Lager, bevor Sie Fahrzeuge hinzufügen: Jedes Fahrzeug befindet sich in einem Lager!",
         "ADMIN_VEHICLE_NO_VEHICLE": "Bitte erstellen Sie ein Fahrzeug, bevor Sie Anhänger hinzufügen: Jeder Anhänger ist mit bestimmten Fahrzeugen kompatibel!",
+        "ADMIN_VEHICLE_EMISSIONS_LABEL": "CO2-Emissionen (g/km)",
         "DELIVERY_TIME_SLOTS": "Lieferzeitraum",
         "OPENING_HOURS_RANGE_TIME_SLOT": "Vom {{fromDay}} bis {{toDay}}, zwischen {{open}} und {{close}}",
         "OPENING_HOURS_SINGLE_TIME_SLOT": "Am {{day}} zwischen {{open}} und {{close}}",
