--- a/js/app/i18n/locales/de.json
+++ b/js/app/i18n/locales/de.json
@@ -10,7 +10,7 @@
         "DATEPICKER_TODAY": "[Heute]",
         "DATEPICKER_TOMORROW": "[Morgen]",
         "DASHBOARD_UNASSIGNED": "Nicht zugeteilt",
-        "DASHBOARD_GENERATING_ORDERS": "Überprüfung aktiver Abonnements...",
+        "DASHBOARD_GENERATING_ORDERS": "Überprüfung der Wiederholungsregeln ...",
         "VEHICLES": "Fahrzeuge",
         "TRAILERS": "Anhänger",
         "SAVE_BUTTON": "Speichern",
@@ -129,7 +129,7 @@
         "ADMIN_DASHBOARD_TASK_FORM_ADDRESS_DESCRIPTION_PLACEHOLDER": "2. Tür links …",
         "RECURRENCE_RULE_ADD": "Wiederholungsregel hinzufügen",
         "RECURRENCE_RULE_DAYS_REQUIRED": "Bitte wählen Sie mindestens einen Tag",
-        "SUBSCRIPTION_CANCELLED": "Abonnement gekündigt",
+        "SUBSCRIPTION_CANCELLED": "Wiederholungsregel storniert",
         "RESTAURANTS_AND_STORES": "Restaurants und Geschäfte",
         "PAYMENT_FORM_REDIRECT_HELP": "Du wirst zur Seite deiner Bank weitergeleitet, um die Bezahlung zu vervollständigen",
         "PAYMENT_FORM_CARDHOLDER_NAME": "Name des Karteninhabers",
