--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -13,7 +13,7 @@
         "DATEPICKER_TODAY": "[Hoy]",
         "DATEPICKER_TOMORROW": "[Mañana]",
         "DASHBOARD_UNASSIGNED": "No asignado",
-        "DASHBOARD_GENERATING_ORDERS": "Comprobando suscripciones activas...",
+        "DASHBOARD_GENERATING_ORDERS": "Comprobando las reglas de recurrencia ...",
         "ENABLED": "Activado",
         "DISABLED": "Desactivado",
         "VEHICLES": "Vehículos",
@@ -335,7 +335,7 @@
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Mostrar reglas recurrentes",
         "RECURRENCE_RULE_ADD": "Agregar regla de recurrencia",
         "RECURRENCE_RULE_DAYS_REQUIRED": "Por favor, elija al menos un día",
-        "SUBSCRIPTION_CANCELLED": "Suscripción cancelada",
+        "SUBSCRIPTION_CANCELLED": "Regla de recurrencia cancelada",
         "ADMIN_DASHBOARD_VIEW_MODE_DROPOFF_ASC": "Mostrar las entregas de forma ascendente.",
         "ADMIN_DASHBOARD_DELETE_GROUP_CONFIRM": "¿Estas segura que quieres borrar todas las tareas del grupo?",
         "RRULE": {
