--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -722,6 +722,7 @@ basics.next: Suivant
 basics.continue: Continuer
 basics.powered_by: Propulsé par <a href="https://coopcycle.org">CoopCycle</a>
 basics.edit: Modifier
+basics.editing: Édition
 basics.add: Ajouter
 basics.view: Voir
 basics.delete: Supprimer
