--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -870,7 +870,7 @@ stores.addresses: Addresses
 stores.recurrence_rules: Recurrence rules
 stores.recurrence_rules.empty_message: When a recurring order is created, the recurrence rules will appear here
 recurrence_rules.table.repeat: Repeat
-recurrence_rules.table.generate_orders: Generate tasks
+recurrence_rules.table.generate_orders: Generate tasks/orders
 recurrence_rules.table.created_at: Rule created
 recurrence_rule.legacy: Use dispatch dashboard to remove this rule
 meta.title: Delivery platform for worker-owned business
