fix: hide barcode for pickup task.

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -135,6 +135,7 @@
         "ADMIN_DASHBOARD_COMPLETE_FORM_COMMENTS_LABEL": "Comments",
         "ADMIN_DASHBOARD_COMPLETE_FORM_COMMENTS_PLACEHOLDER": "Ex: address not found, no problem…",
         "ADMIN_DASHBOARD_TASK_FORM_SHOW_HISTORY": "Show history",
+        "ADMIN_DASHBOARD_TASK_FORM_SHOW_BARCODE": "Show barcode",
         "ADMIN_DASHBOARD_COURIER_SELECT_PLACEHOLDER": "Select a courier…",
         "ADMIN_DASHBOARD_COURIERS_SELECT_PLACEHOLDER": "Select couriers…",
         "ADMIN_DASHBOARD_SEARCH": "Search",
