--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -600,6 +600,7 @@
           "on": "on",
           "weekday": "weekday",
           "day": "day"
-        }
+        },
+      "GENERIC_BARCODE_HELP": "This task barcode can track all linked packages as a single unit. Use it for simplified tracking of the entire delivery. For detailed package-by-package tracking, use individual package barcodes instead."
     }
 }
