--- a/translations/emails.fr.yml
+++ b/translations/emails.fr.yml
@@ -31,11 +31,13 @@ order.foodtech.cancelled: |
   <br>
   Votre compte n'a pas été débité.
 order.loopeat.accepted: |
-  <p>Vous avez choisi l’option zéro déchet, bravo !</p>
-  <p>Pensez à rendre la/les lunchbox et le sac en tissu au coursier lors de votre prochaine livraison de repas.</p>
-  <p>Grâce à vous, nous changeons le monde, un repas après l’autre.</p>
-  <p>Parlez-en autour de vous, chaque geste compte !</p>
-  <p>Bon appétit ! LoopEat</p>
+  <p>Bravo pour votre commande zéro-déchet avec notre partenaire « %name% ».</p>
+  <p>Vous pourrez retourner vos boîtes réutilisables gratuitement dans le réseau de partenaires (liste sur votre compte « %name% ») ou demander à votre coursier de le faire pour vous à la prochaine commande.</p>
+  <p>N'oubliez pas de rendre le totebag!</p>
+order.loopeat.accepted.with_fee: |
+  <p>Bravo pour votre commande zéro-déchet avec notre partenaire « %name% ».</p>
+  <p>Vous pourrez retourner vos boîtes réutilisables gratuitement dans le réseau de partenaires (liste sur votre compte « %name% ») ou demander à votre coursier de le faire pour vous à la prochaine commande (frais %amount%).</p>
+  <p>N'oubliez pas de rendre le totebag!</p>
 admin.order.created.subject: Nouvelle commande à confirmer
 admin.order.created.body: |
   Bonjour,
