--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -93,6 +93,7 @@
         "ADMIN_DASHBOARD_FILTERS_SHOW_ALL": "Show all",
         "ADMIN_DASHBOARD_FILTERS_HIDE": "Hide",
         "ADMIN_DASHBOARD_HIDE_SHOW_ON_MAP": "Hide/show on map",
+        "ADMIN_DASHBOARD_ONLY_UNASSIGNED_WITH_SHIFT": "Only unassigned tasks column handle shift selection",
         "ADMIN_DASHBOARD_FILTERS_INCIDENT_REPORTED_TASKS": "Tasks with incident reports",
         "ONLY_SHOW_THESE": "Only show these",
         "ONLY_THIS_FILTER": "This filter exclusively",
