--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -76,6 +76,7 @@
         "ADMIN_DASHBOARD_FILTERS_INCIDENT_REPORTED_TASKS": "Tâches avec des rapports d'incident",
         "ONLY_SHOW_THESE": "Montrer uniquement ceux-ci",
         "ONLY_THIS_FILTER": "Ce filtre exclusivement",
+        "ADMIN_DASHBOARD_ONLY_UNASSIGNED_WITH_SHIFT": "Seule la colonne non-assignées supporte la sélection avec MAJ",
         "ADMIN_DASHBOARD_TASK_CAPTION_SHORT": "Tâche #{{id}}",
         "ADMIN_DASHBOARD_TASK_TIME_RANGE": "Entre {{after}} et {{before}}",
         "ADMIN_DASHBOARD_TASK_ASSIGNED_TO": "Assignée à {{username}}",
