--- a/translations/messages.ca.yml
+++ b/translations/messages.ca.yml
@@ -1024,8 +1024,7 @@ form.payment.refund_application_fee.help: "Si marqueu aquesta casella, la comiss
 form.store_type.packages_required.label: Requerir l'entrada de paquets
 form.store_type.package_set.placeholder: Triar un conjunt de paquets
 adminDashboard.customize.title: Personalitzar
-form.settings.mercadopago_testmode.help: "En mode « test », cal utilitzar <a href=\"\
-  https://www.mercadopago.com.ar/developers/es/guides/online-payments/checkout-api/testing#bookmark_tarjetas_de_prueba\"\
+form.settings.mercadopago_testmode.help: "En mode « test », cal utilitzar <a href=\"%url%\"\
   >prova els números de les targetes de crèdit </a> per pagar a la plataforma. <strong>No\
   \ s'intercanviaran diners.</strong> "
 homepage.form.content: <strong>%brand_name%</strong> funciona a nivell local i realitza
